<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AlbumRegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/common_padding_default">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name_album"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/counter_max_name"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_required">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="@integer/counter_max_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilGenre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_genre_album"
            app:helperText="@string/helper_required">

            <AutoCompleteTextView
                android:id="@+id/autocompeteGenre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Classical"
                android:hint="@string/hint_genre_album"
                android:inputType="none"
                tools:ignore="HardcodedText" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRecord"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_record_album"
            app:helperText="@string/helper_required">

            <AutoCompleteTextView
                android:id="@+id/autocompeteRecord"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Discos Fuentes"
                android:hint="@string/hint_record_album"
                android:inputType="none"
                tools:ignore="HardcodedText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilReleaseDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_date_album"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_required">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etReleaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="@integer/counter_max_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_description_album"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_required">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textLongMessage"
                android:maxLength="@integer/counter_max_des" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhotoUrl"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_cover_url"
            app:helperText="@string/helper_required"
            app:startIconDrawable="@drawable/ic_link"
            android:layout_marginBottom="@dimen/common_padding_middle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhotoUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLines="@integer/lines_url_cover"
                android:minLines="@integer/lines_url_cover"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textColor="@color/color_link" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>