<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AlbumFragment"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/albumsRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/descripcion_album"
        tools:listitem="@layout/album_item"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:backgroundTint="@color/design_default_color_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/title_register_album"
        android:src="@drawable/ic_add"
        android:layout_marginBottom="70dp"/>

</FrameLayout>