...
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_duration_track"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_required">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="@integer/counter_max_name" />
        </com.google.android.material.textfield.TextInputLayout>

...
