...
                    android:id="@+id/comentariosButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_ver_comentarios"
                    />
                <Button
                    android:id="@+id/addTrackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_add_track"
                    android:layout_marginBottom="@dimen/common_padding_middle"
                    />

...
